<resources>
    <string name="app_name">訂便當系統</string>
    <string name="Home">回到首頁</string>
    <string name="Check_order">確認訂單</string>
    <string name="Order_data">訂單紀錄</string>


    <string name="title">請選擇便當店</string>
    <string name="Name">店名</string>
    <string name="Address">地址</string>
    <string name="Time">營業時間</string>
    <string name="Phone">電話</string>

    <string name="title2">請選擇便當</string>
    <string name="BentoName">便當名</string>
    <string name="Price">價格</string>
    <string name="Add">加入訂單</string>
    <string name="Confirm_number">請輸入要點幾份</string>
    <string name="Check">查看訂單</string>



</resources>
