<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/StoreImage"
            android:layout_width="244dp"
            android:layout_height="121dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Address"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Time"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>