<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:background="#C63300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/BentoImage"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BentoName"
                style="@style/Style03"
                android:text="@string/BentoName" />

            <TextView
                android:id="@+id/BentoPrice"
                style="@style/Style03"
                android:text="@string/Price" />

        </LinearLayout>

        <TextView
            android:id="@+id/Confirm"
            android:layout_width="250sp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:background="#FFFF00"
            android:text="@string/Add"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>